--- a/app/src/main/res/layout/fragment_entree_menu.xml
+++ b/app/src/main/res/layout/fragment_entree_menu.xml
@@ -25,9 +25,8 @@
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
 
-        <!-- TODO: Add the data binding variable for the EntreeMenuFragment -->
         <variable
-            name="EntreeMenuFragment"
+            name="entreeMenuFragment"
             type="com.example.lunchtray.ui.order.EntreeMenuFragment" />
     </data>
 
@@ -51,14 +50,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/cauliflower"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["cauliflower"].name}'
-                    tools:text="Entree 1" />
+                    tools:text="Entree 1"
+                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["cauliflower"].name)}'/>
 
                 <TextView
                     android:id="@+id/cauliflower_description"
@@ -81,14 +81,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />
 
-                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/chili"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["chili"].name}'
-                    tools:text="Entree 2" />
+                    tools:text="Entree 2"
+                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["chili"].name)}'/>
 
                 <TextView
                     android:id="@+id/chili_description"
@@ -111,14 +112,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/chili_description" />
 
-                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/pasta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pasta"].name}'
-                    tools:text="Entree 3" />
+                    tools:text="Entree 3"
+                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["pasta"].name)}'/>
 
                 <TextView
                     android:id="@+id/pasta_description"
@@ -141,14 +143,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/pasta_description" />
 
-                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/skillet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["skillet"].name}'
-                    tools:text="Entree 4" />
+                    tools:text="Entree 4"
+                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["skillet"].name)}'/>
 
                 <TextView
                     android:id="@+id/skillet_description"
@@ -175,30 +178,32 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/entree_options" />
 
-            <!-- TODO: set the text to the current subtotal value from the view model -->
+
             <TextView
                 android:id="@+id/subtotal"
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text='@{viewModel.subtotal}'/>
 
-            <!-- TODO: cancel the order when clicked -->
+
             <Button
                 android:id="@+id/cancel_button"
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{() -> entreeMenuFragment.cancelOrder()}'/>
 
-            <!-- TODO: go to the next screen when clicked -->
+
             <Button
                 android:id="@+id/next_button"
                 style="@style/Widget.Order.Button.Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{() -> entreeMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
