--- a/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -26,7 +26,9 @@
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
 
-        <!-- TODO: Add the data binding variable for the AccompanimentMenuFragment -->
+        <variable
+            name="accompanimentMenuFragment"
+            type="com.example.lunchtray.ui.order.AccompanimentMenuFragment" />
     </data>
 
 
@@ -49,14 +51,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!-- TODO: set the accompaniment in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/bread"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["bread"].name}'
-                    tools:text="Accompaniment 1" />
+                    tools:text="Accompaniment 1"
+                    android:onClick='@{() -> viewModel.setAccompaniment(viewModel.menuItems["bread"].name)}'/>
 
                 <TextView
                     android:id="@+id/bread_description"
@@ -77,14 +80,14 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bread_description" />
 
-                <!-- TODO: set the accompaniment in the view model when the RadioButton is clicked -->
                 <RadioButton
                     android:id="@+id/berries"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["berries"].name}'
-                    tools:text="Accompaniment 2" />
+                    tools:text="Accompaniment 2"
+                    android:onClick='@{() -> viewModel.setAccompaniment(viewModel.menuItems["berries"].name)}'/>
 
                 <TextView
                     android:id="@+id/berries_description"
@@ -115,7 +118,8 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pickles"].name}'
-                    tools:text="Accompaniment 3" />
+                    tools:text="Accompaniment 3"
+                    android:onClick='@{() -> viewModel.setAccompaniment(viewModel.menuItems["pickles"].name)}'/>
 
                 <!-- TODO: set the text to the accompaniment description using the view model -->
                 <TextView
@@ -144,30 +148,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/accompaniment_options" />
 
-            <!-- TODO: set the text to the current subtotal value from the view model -->
             <TextView
                 android:id="@+id/subtotal"
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text='@{viewModel.subtotal}'/>
 
-            <!-- TODO: cancel the order when clicked -->
             <Button
                 android:id="@+id/cancel_button"
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{() -> accompanimentMenuFragment.cancelOrder()}'/>
 
-            <!-- TODO: go to the next screen when clicked -->
             <Button
                 android:id="@+id/next_button"
                 style="@style/Widget.Order.Button.Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{() -> accompanimentMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
