--- a/app/src/main/res/layout/fragment_side_menu.xml
+++ b/app/src/main/res/layout/fragment_side_menu.xml
@@ -26,7 +26,9 @@
             name="viewModel"
             type="com.example.lunchtray.model.OrderViewModel" />
 
-        <!-- TODO: Add the data binding variable for the SideMenuFragment -->
+        <variable
+            name="sideMenuFragment"
+            type="com.example.lunchtray.ui.order.SideMenuFragment" />
     </data>
 
     <ScrollView
@@ -48,14 +50,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/salad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["salad"].name}'
-                    tools:text="Side 1" />
+                    tools:text="Side 1"
+                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["salad"].name)'/>
 
                 <TextView
                     android:id="@+id/salad_description"
@@ -78,14 +81,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/salad_description" />
 
-                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/soup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["soup"].name}'
-                    tools:text="Side 2" />
+                    tools:text="Side 2"
+                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["soup"].name)'/>
 
                 <TextView
                     android:id="@+id/soup_description"
@@ -109,14 +113,15 @@
                     app:layout_constraintTop_toBottomOf="@id/soup_description" />
 
 
-                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/potatoes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["potatoes"].name}'
-                    tools:text="Side 3" />
+                    tools:text="Side 3"
+                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["potatoes"].name)'/>
 
                 <TextView
                     android:id="@+id/potato_description"
@@ -139,14 +144,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/potato_description" />
 
-                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
+
                 <RadioButton
                     android:id="@+id/rice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["rice"].name}'
-                    tools:text="Side 4" />
+                    tools:text="Side 4"
+                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["rice"].name)'/>
 
                 <TextView
                     android:id="@+id/rice_description"
@@ -173,30 +179,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/side_options" />
 
-            <!-- TODO: set the text to the current subtotal value from the view model -->
+
             <TextView
                 android:id="@+id/subtotal"
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text="Subtotal $5.00"/>
+                tools:text='@{viewModel.subtotal}'
+                />
 
-            <!-- TODO: cancel the order when clicked -->
             <Button
                 android:id="@+id/cancel_button"
                 style="@style/Widget.Order.Button.Cancel"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button" />
+                app:layout_constraintTop_toTopOf="@id/next_button"
+                android:onClick='@{() -> sideMenuFragment.cancelOrder()}'/>
 
-            <!-- TODO: go to the next screen when clicked -->
             <Button
                 android:id="@+id/next_button"
                 style="@style/Widget.Order.Button.Next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/subtotal" />
+                app:layout_constraintTop_toBottomOf="@id/subtotal"
+                android:onClick='@{() -> sideMenuFragment.goToNextScreen()}'/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
