--- a/app/src/main/res/layout/fragment_accompaniment_menu.xml
+++ b/app/src/main/res/layout/fragment_accompaniment_menu.xml
@@ -59,7 +59,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["bread"].name}'
                     tools:text="Accompaniment 1"
-                    android:onClick='@{() -> viewModel.setAccompaniment(viewModel.menuItems["bread"].name)}'/>
+                    android:onClick='@{() -> viewModel.setAccompaniment("bread")}'/>
 
                 <TextView
                     android:id="@+id/bread_description"
@@ -87,7 +87,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["berries"].name}'
                     tools:text="Accompaniment 2"
-                    android:onClick='@{() -> viewModel.setAccompaniment(viewModel.menuItems["berries"].name)}'/>
+                    android:onClick='@{() -> viewModel.setAccompaniment("berries")}'/>
 
                 <TextView
                     android:id="@+id/berries_description"
