--- a/app/src/main/res/layout/fragment_entree_menu.xml
+++ b/app/src/main/res/layout/fragment_entree_menu.xml
@@ -58,7 +58,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["cauliflower"].name}'
                     tools:text="Entree 1"
-                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["cauliflower"].name)}'/>
+                    android:onClick='@{() -> viewModel.setEntree("cauliflower")}'/>
 
                 <TextView
                     android:id="@+id/cauliflower_description"
@@ -89,7 +89,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["chili"].name}'
                     tools:text="Entree 2"
-                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["chili"].name)}'/>
+                    android:onClick='@{() -> viewModel.setEntree("chili")}'/>
 
                 <TextView
                     android:id="@+id/chili_description"
@@ -120,7 +120,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["pasta"].name}'
                     tools:text="Entree 3"
-                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["pasta"].name)}'/>
+                    android:onClick='@{() -> viewModel.setEntree("pasta")}'/>
 
                 <TextView
                     android:id="@+id/pasta_description"
@@ -151,7 +151,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["skillet"].name}'
                     tools:text="Entree 4"
-                    android:onClick='@{() -> viewModel.setEntree(viewModel.menuItems["skillet"].name)}'/>
+                    android:onClick='@{() -> viewModel.setEntree("skillet")}'/>
 
                 <TextView
                     android:id="@+id/skillet_description"
