--- a/app/src/main/res/layout/fragment_side_menu.xml
+++ b/app/src/main/res/layout/fragment_side_menu.xml
@@ -58,7 +58,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["salad"].name}'
                     tools:text="Side 1"
-                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["salad"].name)'/>
+                    android:onClick='@{() -> viewModel.setSide("salad")}'/>
 
                 <TextView
                     android:id="@+id/salad_description"
@@ -89,7 +89,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["soup"].name}'
                     tools:text="Side 2"
-                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["soup"].name)'/>
+                    android:onClick='@{() -> viewModel.setSide("soup")}'/>
 
                 <TextView
                     android:id="@+id/soup_description"
@@ -121,7 +121,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["potatoes"].name}'
                     tools:text="Side 3"
-                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["potatoes"].name)'/>
+                    android:onClick='@{() -> viewModel.setSide("potatoes")}'/>
 
                 <TextView
                     android:id="@+id/potato_description"
@@ -152,7 +152,7 @@
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:text='@{viewModel.menuItems["rice"].name}'
                     tools:text="Side 4"
-                    android:onClick='@{() -> viewModel.setSide(viewModel.menuItems["rice"].name)'/>
+                    android:onClick='@{() -> viewModel.setSide("rice")}'/>
 
                 <TextView
                     android:id="@+id/rice_description"
