--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -103,7 +103,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text='@{viewModel.subtotal}'/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}"/>
 
             <TextView
                 android:id="@+id/tax"
@@ -111,7 +111,7 @@
                 android:layout_marginTop="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/subtotal"
-                tools:text='@{viewModel.tax}'/>
+                tools:text="@{@string/tax(viewModel.tax)}"/>
 
             <TextView
                 android:id="@+id/total"
@@ -121,7 +121,7 @@
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tax"
-                tools:text='@{viewModel.total}'/>
+                tools:text="@{@string/total(viewModel.total)}"/>
 
             <Button
                 android:id="@+id/submit_button"
