--- a/app/src/main/res/layout/fragment_entree_menu.xml
+++ b/app/src/main/res/layout/fragment_entree_menu.xml
@@ -184,7 +184,7 @@
                 style="@style/Widget.LunchTray.TextView.Subtotal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider"
-                tools:text='@{viewModel.subtotal}'/>
+                tools:text="@{@string/subtotal(viewModel.subtotal)}"/>
 
 
             <Button
